Bug 807647: proxy incoming DTLS data to SCTP via the STS thread to avoid locking issues r=ekr